<resources>
    <string name="app_name">Circle Of Death!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="CircleTitle">Circle Of Death!</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="disclaimer_title"></string>
    <string name="disclaimer_text">
        GOVERNMENT WARNING: (1) According to the Surgeon General, women should not drink alcoholic
        beverages during pregnancy because of the risk of birth defects. (2) Consumption of
        alcoholic beverages impairs your ability to drive a car or operate machinery, and may cause
        health problems. Drink Responsibly
    </string>
    <string name="about_title">About</string>
    <string name="about_text">
        Developed my Seal Team Six\n
        Caitlin Loney\n
        Christian Schroeder\n
        Dan Shultz\n
        Horus Cuevas\n
        Jayce Merhi\n
        Lindsey Nicolaysen\n
        \n
        Card Images by Byron Knoll
    </string>
    <string name="game_setup_card_rules_label">Card Rules</string>
    <string name="edit_button">Edit</string>
    <string name="game_setup_questions_default">(default)</string>
    <string name="game_setup_players_label">Players</string>
    <string name="start_game_button">Start Game</string>
    <string name="game_setup_title">Game Setup</string>
    <string name="enter_name_prompt">Enter Name:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit_name">Edit Name:</string>

    <!-- Default Card Rules -->
    <string name="default_ace">
        Waterfall - You must ask a common knowledge question to the person directly to your
        right and directly to your left. The first player to correctly answer your question decides
        the direction in which the circle drinks during this game. You then drink from your drink
        for as long as you\'d like. As soon as you start drinking, the next person must start
        drinking, and then the person after that, etc. until everyone is drinking. The people after
        you cannot stop drinking until the person before them in the circle stops drinking.
    </string>
    <string name="default_king">
        Rule Master - Come up with a rule that must be followed for the rest of the game. Or
        you may abolish a rule set forth by a previous rule master
    </string>
    <string name="default_queen">
        Question Master - Until the next Queen is drawn, whenever you ask a question of
        another player, if they answer they must take a drink.
    </string>
    <string name="default_jack">
        Thumb Master - Until the next Jack is drawn, whenever you put your thumb on the
        table, all other players must do so as well. The last to do so takes a drink.
    </string>
    <string name="default_ten">
        Categories - Pick a category and continue around the circle saying things from within
        that category until someone repeats a word or can\'t think of one in 3 seconds. The loser
        takes a drink.
    </string>
    <string name="default_nine">
        Rhyme - Say a word, and everyone must continue around the circle taking turns saying
        a word that rhymes with the chosen word until someone repeats a word or can\'t think of one
        in 3 seconds. The loser takes a drink.
    </string>
    <string name="default_eight">
        Date - Choose another player, and for the rest of the game, whenever you take a
        drink, they must take one as well.
    </string>
    <string name="default_seven">
        Heaven - Everyone must point to the sky, the last person to do so takes a drink.
    </string>
    <string name="default_six">
        Chicks - Ladies take a drink.
    </string>
    <string name="default_five">
        Guys - Men take a drink.
    </string>
    <string name="default_four">
        Never Have I Ever - All players put up 4 fingers and take turns saying things they
        have never done. If any other player has done said thing, they must put down a finger. The
        first person to put all their fingers down must take a drink.
    </string>
    <string name="default_three">
        Me - Take a drink.
    </string>
    <string name="default_two">
        You - Pick a player and they must take a drink.
    </string>
    <string name="restore_defaults_button">Restore Defaults</string>
    <string name="save_rules">Save Rules</string>
    <string name="edit_rules_title">Edit Rules</string>
    <string name="game_rules">Game Rules</string>
    <string name="game_mode_label">Game Mode</string>
    <string name="break_circle_label">Break Circle</string>
    <string name="pop_tab_label">Pop Tab</string>
    <string name="save_game_rules_button">Save Rules</string>
    <string name="edit_rules_dialog_title">Edit Game Rules</string>
    <string name="game_over">GAME OVER</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="menu_button">MENU</string>

    <!-- Arrays for Game Rules Spinners -->
    <string-array name="game_modes">
        <item>Single Deck</item>
        <item>Endless Mode</item>
    </string-array>

    <string-array name="break_circle_mode">
        <item>Random</item>
        <item>On turn 20</item>
    </string-array>

    <string-array name="pop_tab_mode">
        <item>Random</item>
        <item>On turn 20</item>
    </string-array>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="new_rule_hint">Type your custom rule here!</string>
    <string name="edit_rules">Edit Rules</string>
    <string name="custom_rule">Custom</string>
    <string name="caution">Exit Game?</string>
    <string name="quit_game_warning">Go back to the main menu and lose all game progress?</string>
    <string name="no_players_error">Please add at least one player</string>

</resources>
